Mise a jour du plan et itérations sur les aspects d'apprentissage machine

--- a/4-Sigles_Abrev.tex
+++ b/4-Sigles_Abrev.tex
@@ -17,6 +17,7 @@
   \acro{PLUTO}{Primary Land Use Tax Lot Output}
   \acro{IoU}{Intersection over Union}
   \acro{ReLu}{Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}}
+  \acro{OQLF}{Office Québecois de la Langue Française}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
@@ -28,5 +29,6 @@ TC      & Transport en Commun \\
 PLUTO   & Primary Land Use Tax Lot Output \\
 IoU & Intersection over Union\\
 ReLu & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}\\
+OQLF & Office Québecois de la Langue Française\\
 \end{longtable}
 
