--- a/6-Revue_litterature.tex
+++ b/6-Revue_litterature.tex
@@ -73,28 +73,59 @@ Cette section aura pour but de dresser l'état des connaissances sur les politiq
   L'augmentation de la capacité de calcul numérique et la démocratisation des méthodes d'apprentissage machine a mené \textcite{Hellekes:ParkingSpace:2023} à utiliser la photographie aérienne et des données \ac{OSM} pour identifier les aires de stationnement à l'aide d'une méthode Dense-U-Net. D'autre part, les auteurs utilisent plusieurs ensembles d'orthophotos d'une même zone et les données \ac{OSM} pour identifier les zones de stationnement non démarquées, intermittentes ou informelles comme les trottoirs et jardins. Des méthodes de régression Bayesienne sont utilisées pour introduire explicitement l'incertitude dans la reconnaissance de l'objet de stationnement. \textcite{Henry:CitywideEstimation:2021} est un autre article par la même équipe de recherche qui donne un aperçu des différentes méthodes d'apprentissage machine utilisées jusqu'à présent pour identifier des objets dans un périmètre urbain. D'autre part, ils indiquent que la méthodologie de fusion choisie influe sur les résultats en fonction du type d'objet reconnu. Par exemple, l'inclusion des données \ac{OSM} améliore l'identification de routes et de voies d'accès, mais nuit à l'identification de stationnement.  \par
   \textcite{Yin:ContextenrichedSatellite:2022} est un autre article portant sur l'inventaire de stationnement en utilisant des méthodes d'apprentissage machine pour détecter des stationnements. En plus d'utiliser l'imagerie satellite, les auteurs utilisent des données \ac{OSM} pour ajouter du contexte et voient une amélioration la métrique de de détection \ac{IoU} d'environ 2.5\% en ajouant 2 dimensions supplémentaires au tenseur d'images. Les auteurs on en effet pris les couches de bâtiments et de routes d'\ac{OSM} pour donner plus de contexte aux algorithmes d'aprrentissage machines. Les éléments OSM ont généré 15 dimensions supplémentaires au tenseur qui ont été réduit à 3 par convolution et avec une activation en utilisant une fonction tanh. Ce résultat est ensuite additionné au 3 dimensions d'une image RGB. Ils ont par la suite étalloné leur méthode avec plusieurs algorithmes de segmentation d'image: U-Net, U-Net++, LinkNet, D-LinkNet, FPN, PAN, DeepLab v3 et Deeplab v3+. Les algorithmes ont été testés avec et sans contexte et les auteurs constatent que l'algorithme DeepLab v3 performe le mieux particulièrement sur les stationnement de plus petite taille.
 \section{Apprentissage machine}
+  \subsection{Principe de base}
+    Selon l'\ac{OQLF}\parencite{OQLF:ApprentissageProfond:2024}, la définition de l'apprentissage profond est la suivante:
+    \begin{definition}
+    Mode d'apprentissage automatique généralement effectué par un réseau de neurones artificiels composé de plusieurs couches de neurones hiérarchisées selon le degré de complexité des concepts, et qui, en interagissant entre elles, permettent à un agent d'apprendre progressivement et efficacement à partir de mégadonnées.
+    \end{definition}
+    D'un point de vue mathématique, l'apprentissage est obtenu en représentant les données sous forme matricielle ou vectorielles et en les soummettant à plusieurs opérations algébriques simples successivement de manière à ce que le code produise une sortie désirée. Le problème est formulé non pas en demandant à ce que le logiciel performe des opérations spécifiques, mais en spécifiant une architecture de réseau et un ensemble de pondérations à modifier pour minimiser une foncion de perte donnée.
+  \subsection{Le pipeline d'apprentissage machine}
+  \subsubsection{Survol}
+      Cette section va décrire le processus utilisé pour obtenir des résultats dans le champs de l'apprentissage machine. Ce processus est souvent appelé \og{pipeline d'apprentissage machine} \fg{}. Il est décliné en 6 étapes:
+        \begin{enumerate}
+          \item Préparation des données
+          \item Ingénierie des caractéristiques
+          \item Développement du réseau et entrainement
+          \item Évaluation des résultats et amélioration du modèle
+          \item Déploiement et suivi
+        \end{enumerate}
+      Les sections suivantes détailleront les opérations à chaque étape
+    \subsubsection{Collection et préparation des données}
+        La préparation des données consiste à prendre un ensemble de données et au besoin le nettoyer, enlever les données abérantes, de mettre à l'échelle les données et la création d'un ensemble de données d'apprentissage et d'un ensemble de validation.
+    \subsubsection{Ingénierie des caractéristiques}
+      L'ingénierie des caractéristiques consiste à créer des variables intermédiaires, catégoriques ou de traiter les données de manière à améliorer la capacité prédicitive du modèle d'apprentissage machine dans l'extraction des données pertinentes.
+    \subsubsection{Sélection, codage et entrainement du modèle}
+      Cette partie du \og{pipeline} \fg{} est le coeur de l'opération. À cette étape, une méthode d'extraction des données est choisie et implémentée. Le modèle peut être un modèle personalisé ou issue de la littérature ou d'une librairie pré construite. Deux méthodes sont potentiellement applicables à l'apprentissage. Un modèle pré-existant, avec ses pondération peut être appliqué à un nouveau problème en utilisant de l'apprentissage de transfert (\og{Transfer Learning} \fg{} en anglais) ou le modèle peut être entrainé à partir de pondérations initiales aléatoires. L'apprentissage itère au travers de l'ensemble de données en mettant les données en lots (\og{Batch} \fg{} en anglais) et en modifiant les pondération de manière à minimiser la fonction de pertes. À chaque fois que le modèle complète une itération au travers de l'ensemble des données, une époque (\og{epoch} \fg{} en anglais) est dite complétée. La plupart du temps, la fonction de perte utilisée est compilée pour l'ensemble d'entrainement et de validation à la fin de chaque époque pour permettre d'évaluer la convergence du modèle, ainsi que le degré de sur-ajustement potentiel du modèle. Un modèle est dit sur-ajusté s'il prédit bien sur l'ensemble d'appentissage mais mal sur l'ensemble de validation. Dans certains, la vitesse de prédiction où la taille des modèles peut-être un facteur limitant si le modèle doit être implémentée sur un appareil mobile ou sur des applications temps réel.
+    \subsubsection{Évaluation du modèle}
+      Une fois l'apprentissage completé, le modèle peut-être évalué de différentes manières. Plusieurs indicateurs mesurent le degré de précision du modèle, la vitesse de sa convergence peuvent être évalués en fonction de l'utilisation désirée du modèle. En vision numérique, le degré de similarité entre les données d'apprentissage annotées et les prédictions est souvent la métrique d'évaluation de prédilection.
+    \subsubsection{Déploiement et suivi}
+      À cette étape, le modèle est deployé. Le suivi consiste principalement à recenser les comportement abhérants du modèle et les réintégrer dans le modèle au besoin. 
   \subsection{Opérations communes dans l'apprentissage machine}
-  \subsubsection{Processus d'apprentissage}
-  \hl{INSÉRER DE L'INFORMATION SUR LES PROCESSUS EN BATCH OU DE DESCENTE DE GRADIENT STOCHASTIQUE}
-  \subsubsection{Apprentissage et Rétro-propagation}
-  La rétro-propagation a été introduite comme méthode pour modifier les pondérations des différents opérations algébriques par \textcite{Rumelhart:LearningRepresentations:1986}. La méthode consiste à créer une fonction cumulée d'erreur pour les extrants des réseaux neuronaux. Ensuite, des dérivées partielles sont calculées pour chaque neurones en amont pour trouver la modification requises pour minimiser la fonction d'erreur. Deux méthodes sont envisagées dans l'article initial. La première, modifie les pondérations après chaque donnée d'entrainement tandis que la deuxième somme les erreurs pour l'ensemble du jeu de données d'entrainement.  
-  \subsubsection{Fonctions d'activation}
-  La fonction d'activation a pour but de rendre la sortie de la convolution non-linéaire. Cette non-linéarisation facilite la détection de lieux d'intérêt en créant un démarcation claire entre les zones où il y a un fort potentiel d'activation et où il n'y en a pas. 3 fonctions sont typiquement utilisées à cette fin: 
-    \begin{itemize}
-      \item une fonction sigmoide utilsée dans les fonctions logistique pour assurer une frontière entre 1 et zéro $f(x) = 1/1+ e^{-x} $
-      \item une fonction de tangente hyperbolique $f(x) = \tanh(x) $ 
-      \item une fonction de \ac{ReLu} qui est $f(x)  = max(0,x) $
-    \end{itemize}
-  \subsubsection{Sous échantillonage}
-  Le sous-échantillonage a pour but de réduire la dimensionalité du problème et de réduire la sensibilité du processus à de légères variations \parencite{Lecun:ConvolutionalNetworks:1995}. En effet, si plusieurs fenêtres successives ont des valeurs similaire d'activation puisqu'elles parcourent sensiblement la même zone du domaine, la fonction max pooling trouve le neurone qui a l'activation la plus forte et assigne cette valeur pour l'entièreté de la zone. La fenêtre du sous échantillonage peut être fixée dans l'architecture du réseau. \textcite{Boureau:TheoreticalAnalysis:2010} compare comment différentes méthodes de sous échantillonage se comportent et constatent que la méthode de max pooling qui extraie le maximum d'une fenêtre de sous-échantillonage(plutôt qu'une moyenne) tend à mieux performer pour des caratérisiques à faible potentiel d'activation et constatent que ce dernier tend à mieux performer. Le max pooling est la forme de sous-échantillonage la plus commune dans les recherche de l'auteur \parencite{Ronneberger:UNetConvolutional:2015, He:DeepResidual:2016}
-  \subsubsection{Normalisation par lots}
-  La normalisation par lots \parencite{Ioffe:BatchNormalization:2015} a été introduite comme méthode pour accélérer l'entrainement de réseaux neuronaux. En effet, les variations des intrants dans chaque couche du fait de la modifications des poids dans chaque convolution imposait une limite supérieure au taux d'apprentissage possible(i.e. le taille de pas du changement des pondérations du réseau neuronal) pour éviter que le modèle ne dégénère ou n'arrive dans un minimum local. La normalization par lots ou \og{Batch Normalization} \fg{} normalise les extrants de la couche précédente pour chaque activation ou neurone de la couche. D'autre part, un biais et une pente sont affectés à chaque itération durant la phase d'apprentissage pour normaliser chaque input de neurone avec une moyenne de zéro et un écart type de 1. Lors de la phase d'inférence, les moyennes et écarts types sont affectés pour l'entièreté des échantillons sur le réseau finales. Ces poids sont compensés pour assurer que la normalisation n'efface pas l'effet des poids des opérations de convolution précédent. 
-  \subsection{Fonctionnement général des réseaux neuronaux convolutifs}
-  \hl{CETTE SECTION DOIT ÊTRE MIEUX SOURCÉE. PRÉSENTEMENT TIRÉ DE BRIBES SUR INTERNET}\par
-  \subsubsection{Principe de base}
-  Les origines des réseaux neuronaux convolutifs proviennent à l'origine de la neuro-science où des chercheurs utilisaient ces modèles pour tenter d'expliquer les processus de vision \parencite{Fukushima:NeocognitronSelforganizing:1980} chez les animaux. L'architecture de convolution vise a identifier des patrons indépendemment de la position d'objet dans le champs de vision. L'idée est qu'un ensemble de données est pondéré plusieurs fois en succession pour extraire une idée abstraite de cet ensemble. Les neurones ou résultantes des multiplications sont dites activées si elles ont des valeur hautes relatives aux autres résultantes. Les multiplications (ou couches) du réseau visent à pondérer les données pour identifier des patrons en répétant les mêmes opérations sur un sous ensemble des données. Le fait de multiplier successivement les données par des poids augmente le niveau d'abstraction à chaque étape. La prémisse de l'apprentissage profond est qu'en modifiant les pondérations successives avec des données annotées, il est possible pour le réseau neuronal de faire de l'inférence sur des tâches et des données similaires avec une fidélité similaire ou supérieure à celle d'annoteurs humains plus rapidement et à moindre coûts. Ce processus d'ajustement des pondérations se fait par rétropropagation où une métrique d'erreur est définie et une méthode des gradients \parencite{Rumelhart:LearningRepresentations:1986}\par
-  \subsubsection{La convolution pour réduire l'ordre du problème}
-  Les premières conceptions de réseau neuronaux étaient pleinement connectées. Dans ces cas, toutes les données sont connectées à chaque neurone et il incombe donc de trouver un poids pour chaque connection entre l'entrée et la sortie, résultant dans des modèles très demandants. D'autre part,  les réseaux neuronaux convolutifs ou \og{\ac{CNN}}\fg{} réduisent l'ordre du problème de plusieurs manières. Premièrement, plutôt que d'affecter un poids à chaque connection entre l'entrée et la sortie, les \ac{CNN} appliquent les mêmes poids à un sous ensemble des entrées au sein d'une fenêtre et déplacent ensuite la fenêtre d'un pas prédéterminé et ré-appliquent la même formulation. Ces pondérations sont appelées noyau de convolution ou \og{kernel} \fg. Ces noyaux constituent une empreinte pour un patron dans les données \parencite{Lecun:ConvolutionalNetworks:1995}. Cela fait en sorte que même si 10000 connections existent dans un réseau convolutif, les connections sont controlées par seulement 2600 paramètres.\par
+    \subsubsection{La fonction de perte}
+      La fonction de perte de perte est la fonction objectif que le réseau de neurones essaie de minimiser. \textcite{Azad:LossFunctions:2023, Jadon:SurveyLoss:2020} donnent un survol des principaux types de fonction de pertes et de leur applicabilité pour différentes tâches de segmentation d'image. Le choix d'une fonction de perte est dépendant de la taille de l'objet à détecter et de l'équilibre entre les différentes classes à détecter:\par
+      \paragraph{Entropie Croisée Balancée} L'entropie balancée croisée est l'une des fonction de pertes les plus communes et s'applique bien avec des ensemble de données avec une distribution relativement entre les différentes classes à détecter. 
+      \subsection{Entropie Croisée balancée avec Logits} L'entropie balancée croisée peut être utilisée dans des cas où il y a une seule 
+      \paragraph{Coefficient de Dice} 
+    \subsubsection{Apprentissage et Rétro-propagation}
+      La rétro-propagation a été introduite comme méthode pour modifier les pondérations des différents opérations algébriques par \textcite{Rumelhart:LearningRepresentations:1986}. La méthode consiste à créer une fonction cumulée d'erreur pour les extrants des réseaux neuronaux. Ensuite, des dérivées partielles sont calculées pour chaque neurones en amont pour trouver la modification requises pour minimiser la fonction d'erreur. Deux méthodes sont envisagées dans l'article initial. La première, modifie les pondérations après chaque donnée d'entrainement tandis que la deuxième somme les erreurs pour l'ensemble du jeu de données d'entrainement.  
+    \subsubsection{Fonctions d'activation}
+    La fonction d'activation a pour but de rendre la sortie de la convolution non-linéaire. Cette non-linéarisation facilite la détection de lieux d'intérêt en créant un démarcation claire entre les zones où il y a un fort potentiel d'activation et où il n'y en a pas. 3 fonctions sont typiquement utilisées à cette fin: 
+      \begin{itemize}
+        \item une fonction sigmoide utilsée dans les fonctions logistique pour assurer une frontière entre 1 et zéro $f(x) = 1/1+ e^{-x} $
+        \item une fonction de tangente hyperbolique $f(x) = \tanh(x) $ 
+        \item une fonction de \ac{ReLu} qui est $f(x)  = max(0,x) $
+      \end{itemize}
+    \subsubsection{Sous échantillonage}
+    Le sous-échantillonage a pour but de réduire la dimensionalité du problème et de réduire la sensibilité du processus à de légères variations \parencite{Lecun:ConvolutionalNetworks:1995}. En effet, si plusieurs fenêtres successives ont des valeurs similaire d'activation puisqu'elles parcourent sensiblement la même zone du domaine, la fonction max pooling trouve le neurone qui a l'activation la plus forte et assigne cette valeur pour l'entièreté de la zone. La fenêtre du sous échantillonage peut être fixée dans l'architecture du réseau. \textcite{Boureau:TheoreticalAnalysis:2010} compare comment différentes méthodes de sous échantillonage se comportent et constatent que la méthode de max pooling qui extraie le maximum d'une fenêtre de sous-échantillonage(plutôt qu'une moyenne) tend à mieux performer pour des caratérisiques à faible potentiel d'activation et constatent que ce dernier tend à mieux performer. Le max pooling est la forme de sous-échantillonage la plus commune dans les recherche de l'auteur \parencite{Ronneberger:UNetConvolutional:2015, He:DeepResidual:2016}
+    \subsubsection{Normalisation par lots}
+    La normalisation par lots \parencite{Ioffe:BatchNormalization:2015} a été introduite comme méthode pour accélérer l'entrainement de réseaux neuronaux. En effet, les variations des intrants dans chaque couche du fait de la modifications des poids dans chaque convolution imposait une limite supérieure au taux d'apprentissage possible(i.e. le taille de pas du changement des pondérations du réseau neuronal) pour éviter que le modèle ne dégénère ou n'arrive dans un minimum local. La normalization par lots ou \og{Batch Normalization} \fg{} normalise les extrants de la couche précédente pour chaque activation ou neurone de la couche. D'autre part, un biais et une pente sont affectés à chaque itération durant la phase d'apprentissage pour normaliser chaque input de neurone avec une moyenne de zéro et un écart type de 1. Lors de la phase d'inférence, les moyennes et écarts types sont affectés pour l'entièreté des échantillons sur le réseau finales. Ces poids sont compensés pour assurer que la normalisation n'efface pas l'effet des poids des opérations de convolution précédent. 
+    
+    \subsection{Fonctionnement général des réseaux neuronaux convolutifs}
+    \hl{CETTE SECTION DOIT ÊTRE MIEUX SOURCÉE. PRÉSENTEMENT TIRÉ DE BRIBES SUR INTERNET}\par
+    \subsubsection{Principe de base}
+    Les origines des réseaux neuronaux convolutifs proviennent à l'origine de la neuro-science où des chercheurs utilisaient ces modèles pour tenter d'expliquer les processus de vision \parencite{Fukushima:NeocognitronSelforganizing:1980} chez les animaux. L'architecture de convolution vise a identifier des patrons indépendemment de la position d'objet dans le champs de vision. L'idée est qu'un ensemble de données est pondéré plusieurs fois en succession pour extraire une idée abstraite de cet ensemble. Les neurones ou résultantes des multiplications sont dites activées si elles ont des valeur hautes relatives aux autres résultantes. Les multiplications (ou couches) du réseau visent à pondérer les données pour identifier des patrons en répétant les mêmes opérations sur un sous ensemble des données. Le fait de multiplier successivement les données par des poids augmente le niveau d'abstraction à chaque étape. La prémisse de l'apprentissage profond est qu'en modifiant les pondérations successives avec des données annotées, il est possible pour le réseau neuronal de faire de l'inférence sur des tâches et des données similaires avec une fidélité similaire ou supérieure à celle d'annoteurs humains plus rapidement et à moindre coûts. Ce processus d'ajustement des pondérations se fait par rétropropagation où une métrique d'erreur est définie et une méthode des gradients \parencite{Rumelhart:LearningRepresentations:1986}\par
+    \subsubsection{La convolution pour réduire l'ordre du problème}
+    Les premières conceptions de réseau neuronaux étaient pleinement connectées. Dans ces cas, toutes les données sont connectées à chaque neurone et il incombe donc de trouver un poids pour chaque connection entre l'entrée et la sortie, résultant dans des modèles très demandants. D'autre part,  les réseaux neuronaux convolutifs ou \og{\ac{CNN}}\fg{} réduisent l'ordre du problème de plusieurs manières. Premièrement, plutôt que d'affecter un poids à chaque connection entre l'entrée et la sortie, les \ac{CNN} appliquent les mêmes poids à un sous ensemble des entrées au sein d'une fenêtre et déplacent ensuite la fenêtre d'un pas prédéterminé et ré-appliquent la même formulation. Ces pondérations sont appelées noyau de convolution ou \og{kernel} \fg. Ces noyaux constituent une empreinte pour un patron dans les données \parencite{Lecun:ConvolutionalNetworks:1995}. Cela fait en sorte que même si 10000 connections existent dans un réseau convolutif, les connections sont controlées par seulement 2600 paramètres.\par
   \subsection{Fonctionnement général des réseaux de transformeurs}
   \subsection{Types de problèmes de vision numérique}
   Les problèmes de reconnaissance d'images se divisent en trois types de solution; la classification consiste à dire si une image contient un objet ou appartient à une classe d'image; la détection consiste à trouver un objet dans une image et à l'illustrer typiquement au moyen d'une boîte englobante; la segmentation sert à illustrer les contours détaillés d'un objet, les classifications se font typiquement pixel par pixel selon différentes classes. Les méthodes de segmentation d'instance sont un hybride des méthodes de détection et de segmentation. Dans ces problèmes, des instances de chaque type sont identifiées au moyen de boites englobantes puis un masque est généré pour le type pour illustrer l'objet. La figure \ref{fig:computer_vision_problems} représente le résultat de différents processus d'apprentissages sur une même image:
@@ -108,7 +139,14 @@ Cette section aura pour but de dresser l'état des connaissances sur les politiq
   \subsection{Algorithmes de segmentation sémantique basés sur la convolution}
 
   \subsubsection{U-Net}
-
+    U-net a initiallement été développé comme méthode de segmentation d'imagerie médicale par \textcite{Ronneberger:UNetConvolutional:2015}. Dans son implémentation initiale, le diagramme du réseau est donné à la figure \ref{fig:unet_arch}.
+    \begin{figure}[!h]
+      \centering
+      \includegraphics[width= 0.8 \textwidth]{unet_architecture.png}
+      \caption{Architecture de réseau U-net \parencite{Ronneberger:UNetConvolutional:2015}}
+      \label{fig:unet_arch}
+    \end{figure}
+    L'architecture peut être séparée en deux grandes phases. À gauche, il ya une phase d'encodage qui est constituée de 4 sous blocs. Chaque sous bloque est constituée de deux opérations de convolution 3x3 et d'activation \ac{ReLu} suivi d'un sous-échantillonage utilisant max-pool pour augmenter le niveau d'abstraction, créer un carte de caractéristiques de plus en plus grossière et abstraite. Au niveau d'abstraction le plus haut, une carte de caractéristique de 32x32 est créée au goulot d'étranglement du réseau. La partie de droite constitue le décodeur. Dans cette phase, la carte des caractéristiques des niveaux d'abstraction supérieurs est sur échantillonée, concatennée avec le résultat de convolution, puis passe par une opération de double convolution. Le processus est repété jusqu'à revenir à la résolution de départ pour générer le masque de segmentation de l'image avec un convolution 1x1 finale. Plusieurs implémentations ont été trouvées qui créaient des masque de la même taille que l'image d'origine en utilisant du garnissage de zéro 
   \subsubsection{Dense U-Net}
 
   \subsubsection{DenseLabV3+}
