--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -114,6 +114,24 @@
   file = {C:\Users\paulc\Zotero\storage\M72R523Q\Awan et al. - 2020 - A Comparative Analysis of MachineDeep Learning Mo.pdf}
 }
 
+@misc{Azad:LossFunctions:2023,
+  title = {Loss {{Functions}} in the {{Era}} of {{Semantic Segmentation}}: {{A Survey}} and {{Outlook}}},
+  shorttitle = {Loss {{Functions}} in the {{Era}} of {{Semantic Segmentation}}},
+  author = {Azad, Reza and Heidary, Moein and Yilmaz, Kadir and H{\"u}ttemann, Michael and Karimijafarbigloo, Sanaz and Wu, Yuli and Schmeink, Anke and Merhof, Dorit},
+  year = {2023},
+  month = dec,
+  number = {arXiv:2312.05391},
+  eprint = {2312.05391},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2312.05391},
+  urldate = {2024-07-03},
+  abstract = {Semantic image segmentation, the process of classifying each pixel in an image into a particular class, plays an important role in many visual understanding systems. As the predominant criterion for evaluating the performance of statistical models, loss functions are crucial for shaping the development of deep learning-based segmentation algorithms and improving their overall performance. To aid researchers in identifying the optimal loss function for their particular application, this survey provides a comprehensive and unified review of \$25\$ loss functions utilized in image segmentation. We provide a novel taxonomy and thorough review of how these loss functions are customized and leveraged in image segmentation, with a systematic categorization emphasizing their significant features and applications. Furthermore, to evaluate the efficacy of these methods in real-world scenarios, we propose unbiased evaluations of some distinct and renowned loss functions on established medical and natural image datasets. We conclude this review by identifying current challenges and unveiling future research opportunities. Finally, we have compiled the reviewed studies that have open-source implementations on our GitHub page.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\LSVN66VY\\Azad et al. - 2023 - Loss Functions in the Era of Semantic Segmentation.pdf;C\:\\Users\\paulc\\Zotero\\storage\\VWLXWVMM\\2312.html}
+}
+
 @inproceedings{Azimi:SkyScapesFineGrained:2019,
   title = {{{SkyScapes}} \- {{Fine-Grained Semantic Understanding}} of {{Aerial Scenes}}},
   booktitle = {2019 {{IEEE}}/{{CVF International Conference}} on {{Computer Vision}} ({{ICCV}})},
@@ -585,6 +603,23 @@
   keywords = {Land use,Parking,Surveys}
 }
 
+@article{Dimitrovski:CurrentTrends:2023,
+  title = {Current Trends in Deep Learning for {{Earth Observation}}: {{An}} Open-Source Benchmark Arena for Image Classification},
+  shorttitle = {Current Trends in Deep Learning for {{Earth Observation}}},
+  author = {Dimitrovski, Ivica and Kitanovski, Ivan and Kocev, Dragi and Simidjievski, Nikola},
+  year = {2023},
+  month = mar,
+  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+  volume = {197},
+  pages = {18--35},
+  issn = {0924-2716},
+  doi = {10.1016/j.isprsjprs.2023.01.014},
+  urldate = {2024-06-29},
+  abstract = {We present AiTLAS: Benchmark Arena -- an open-source benchmark suite for evaluating state-of-the-art deep learning approaches for image classification in Earth Observation (EO). To this end, we present a comprehensive comparative analysis of more than 500 models derived from ten different state-of-the-art architectures and compare them to a variety of multi-class and multi-label classification tasks from 22 datasets with different sizes and properties. In addition to models trained entirely on these datasets, we benchmark models trained in the context of transfer learning, leveraging pre-trained model variants, as it is typically performed in practice. All presented approaches are general and can be easily extended to many other remote sensing image classification tasks not considered in this study. To ensure reproducibility and facilitate better usability and further developments, all of the experimental resources including the trained models, model configurations, and processing details of the datasets (with their corresponding splits used for training and evaluating the models) are publicly available on the repository: https://github.com/biasvariancelabs/aitlas-arena.},
+  keywords = {Benchmark study,Deep learning (DL),Earth observation (EO),Image classification},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\7HRLWGA4\\Dimitrovski et al. - 2023 - Current trends in deep learning for Earth Observat.pdf;C\:\\Users\\paulc\\Zotero\\storage\\AVD6VG56\\S0924271623000205.html}
+}
+
 @inproceedings{Dosovitskiy:ImageWorth:2020,
   title = {An {{Image}} Is {{Worth}} 16x16 {{Words}}: {{Transformers}} for {{Image Recognition}} at {{Scale}}},
   shorttitle = {An {{Image}} Is {{Worth}} 16x16 {{Words}}},
@@ -611,6 +646,19 @@
   doi = {10.3141/2010-12},
   abstract = {To promote land-efficient development that supports nonautomobile modes of transportation, many municipalities are trying to implement parking policies that minimize parking oversupply and use existing parking supply more effectively. A commonly proposed strategy is for municipalities to lower their minimum parking standards. However, parking supply decisions are based on many factors, and experience shows that reducing parking standards does not always lead to corresponding reductions in parking supply. Using the results of an extensive commercial parking survey conducted across the City of Toronto, Canada, this study develops an empirical approach to determine whether reductions in parking standards are likely to lead to reductions in the amount of parking supplied by new development. It is proposed that the proportion of existing sites supplying less parking than existing standards require can be used as an indicator of the likelihood of developers to respond to reductions in parking standards by providing less parking. This assumes that the development characteristics of surveyed sites can be considered representative of current development practices. Applying such an analysis to Toronto, it is expected that reducing the parking standards for general office, medical office, and general retail uses will be a successful strategy in encouraging new development to provide fewer parking spaces on average. Such a strategy will be less successful for bank and large grocery uses, which tend to provide more parking and are less sensitive to minimum parking standards.},
   keywords = {Parking,Strategic planning,Sustainable development}
+}
+
+@article{Erdem:ComparisonDifferent:2020,
+  title = {Comparison of {{Different U-Net Models}} for {{Building Extraction}} from {{High-Resolution Aerial Imagery}}},
+  author = {Erdem, F{\i}rat and Avdan, Ugur},
+  year = {2020},
+  month = sep,
+  journal = {International Journal of Environment and Geoinformatics},
+  volume = {7},
+  pages = {221--227},
+  doi = {10.30897/ijegeo.684951},
+  abstract = {Building extraction from high-resolution aerial imagery plays an important role in geospatial applications such as urban planning, telecommunication, disaster monitoring, navigation, updating geographic databases, and urban dynamic monitoring. Automatic building extraction is a challenging task, as the buildings in different regions have different spectral and geometric properties. Therefore, the classical image processing techniques are not sufficient for automatic building extraction from high-resolution aerial imagery applications. Deep learning and semantic segmentation models, which have gained popularity in recent years, have been used for automatic object extraction from high-resolution images. U-Net model, which was originally developed for biomedical image processing, was used for building extraction. The encoder part of the U-Net model has been modified with Vgg16, InceptionResNetV2, and DenseNet121 convolutional neural networks. Therefore, building extraction was performed using Vgg16 U-Net, InceptionResNetV2 U-Net, and DenseNet121 U-Net models. In the fourth method, the results obtained from each U-Net model were combined in order to obtain the final result by maximum voting. This study aims to compare the performance of these four methods in building extraction from high-resolution aerial imagery. Images of Chicago from the Inria Aerial Image Labeling Dataset were used in the study. The images used have 0.3 m spatial resolution, 8-bit radiometric resolution and 3-band (red, green, and blue bands). Images consist of 36 tiles and they were divided into image subsets of 512x512 pixels. Thus, a total of 2715 image subsets were formed. 80\% of the image subsets (2172 image subset) were used as training and 20\% (543 image subset) as testing. To evaluate the accuracy of methods, the F1 score of the building class was employed. The F1 scores for building class have been calculated as 0.866, 0.860, 0.856, and 0.877 on test images for U-Net Vgg16, U-Net InceptionResNetV2, U-Net DenseNet121, and majority voting method, respectively.},
+  file = {C:\Users\paulc\Zotero\storage\ETNZIVMH\Erdem and Avdan - 2020 - Comparison of Different U-Net Models for Building .pdf}
 }
 
 @inproceedings{Fae:AnalysisLand:2014,
@@ -891,6 +939,22 @@
   file = {C:\Users\paulc\Zotero\storage\WQLPJK7J\Huang et al. - 2018 - Tiling and Stitching Segmentation Output for Remot.pdf}
 }
 
+@article{Huang:UrbanLanduse:2018,
+  title = {Urban Land-Use Mapping Using a Deep Convolutional Neural Network with High Spatial Resolution Multispectral Remote Sensing Imagery},
+  author = {Huang, Bo and Zhao, Bei and Song, Yimeng},
+  year = {2018},
+  month = sep,
+  journal = {Remote Sensing of Environment},
+  volume = {214},
+  pages = {73--86},
+  issn = {0034-4257},
+  doi = {10.1016/j.rse.2018.04.050},
+  urldate = {2024-06-29},
+  abstract = {Urban land-use mapping is a significant yet challenging task in the field of remote sensing. Although numerous classification methods have been developed for obtaining land-use information in urban areas, the accuracy and efficiency of these methods are insufficient to meet the requirements of real-world applications such as urban planning and land management. In recent years, deep learning techniques, especially deep convolutional neural networks (DCNN), have achieved an astonishing level of performance in image classification. However, the traditional DCNN methods do not focus on multispectral remote sensing images with more than three channels, and they are limited by their training samples. In addition, these methods uniformly decompose large images into small processing units, which chop up the land-use patterns and produce land-use maps with obvious ``blocks''. In this study, a semi-transfer deep convolutional neural network (STDCNN) approach is proposed to overcome these weaknesses. The proposed STDCNN has three parts: one part involves a transferred DCNN with deep architecture; another part is designed to analyze multispectral images; and the final part fuses the first two parts into a classification layer. Moreover, a skeleton-based decomposing method using street block data is devised to maintain the integrity of the land-use patterns. In two case studies, the proposed method is used to generate urban land-use maps from a WorldView-3 image of a 143\,km2 area of Hong Kong and a WorldView-2 image of a 25\,km2 area of Shenzhen. The results show that the proposed STDCNN obtains an overall accuracy (OA) of 91.25\% and a Kappa coefficient (Kappa) of 0.903 for Hong Kong land-use classification, and an OA of 80\% and a Kappa of 0.780 for Shenzhen land-use classification. In addition, due to the proposed skeleton-based decomposition method, the proposed method can produce better land-use maps for real-world urban applications.},
+  keywords = {Classification,Deep convolutional neural networks,High spatial resolution,Land-use mapping,Multispectral remote sensing image,Skeleton extraction,Street block,Transfer learning},
+  file = {C:\Users\paulc\Zotero\storage\HSEKQ7DP\S0034425718302074.html}
+}
+
 @article{Hurst-Tarrab:RobustParking:2020,
   title = {Robust {{Parking Block Segmentation}} from a {{Surveillance Camera Perspective}}},
   author = {{Hurst-Tarrab}, Nisim and Chang, Leonardo and {Gonzalez-Mendoza}, Miguel and {Hernandez-Gress}, Neil},
@@ -981,6 +1045,37 @@
   file = {C:\Users\paulc\Zotero\storage\P5EMM25U\Ison et Mulley - 2014 - Parking issues and policies.pdf}
 }
 
+@article{Jaccard:DistributionFlore:1901,
+  title = {Distribution de La Flore Alpine Dans Le {{Bassin}} Des {{Dranses}} et Dans Quelques R{\'e}gions Voisines},
+  author = {Jaccard, Paul},
+  year = {1901},
+  journal = {Bulletin de la Soci{\'e}t{\'e} Vaudoise des Sciences Naturelles},
+  volume = {37},
+  number = {140},
+  pages = {241},
+  publisher = {Imprimerie Corbaz \& Comp.},
+  issn = {0037-9603},
+  doi = {10.5169/seals-266440},
+  file = {C:\Users\paulc\Zotero\storage\G44TPDKR\Jaccard - 1901 - Distribution de la flore alpine dans le Bassin des.pdf}
+}
+
+@inproceedings{Jadon:SurveyLoss:2020,
+  title = {A Survey of Loss Functions for Semantic Segmentation},
+  booktitle = {2020 {{IEEE Conference}} on {{Computational Intelligence}} in {{Bioinformatics}} and {{Computational Biology}} ({{CIBCB}})},
+  author = {Jadon, Shruti},
+  year = {2020},
+  month = oct,
+  eprint = {2006.14822},
+  primaryclass = {cs, eess},
+  pages = {1--7},
+  doi = {10.1109/CIBCB48159.2020.9277638},
+  urldate = {2024-07-03},
+  abstract = {Image Segmentation has been an active field of research as it has a wide range of applications, ranging from automated disease detection to self-driving cars. In the past five years, various papers came up with different objective loss functions used in different cases such as biased data, sparse segmentation, etc. In this paper, we have summarized some of the well-known loss functions widely used for Image Segmentation and listed out the cases where their usage can help in fast and better convergence of a model. Furthermore, we have also introduced a new log-cosh dice loss function and compared its performance on the NBFS skull-segmentation open-source data-set with widely used loss functions. We also showcased that certain loss functions perform well across all data-sets and can be taken as a good baseline choice in unknown data distribution scenarios. Our code is available at Github: https://github.com/shruti-jadon/Semantic-Segmentation-Loss-Functions.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Electrical Engineering and Systems Science - Image and Video Processing},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\ID5XJSYF\\Jadon - 2020 - A survey of loss functions for semantic segmentati.pdf;C\:\\Users\\paulc\\Zotero\\storage\\JKMUTFYB\\2006.html}
+}
+
 @book{Jakle:LotsParking:2004,
   title = {Lots of {{Parking}}: {{Land Use}} in a {{Car Culture}}},
   shorttitle = {Lots of {{Parking}}},
@@ -1041,9 +1136,30 @@
   file = {C:\Users\paulc\Zotero\storage\I463HHGL\Lecun and Bengio - 1995 - Convolutional Networks for Images, Speech, and Tim.pdf}
 }
 
-@article{LeCun:HandwrittenDigit:,
+@article{LeCun:DeepLearning:2015,
+  title = {Deep Learning},
+  author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  year = {2015},
+  month = may,
+  journal = {Nature},
+  volume = {521},
+  number = {7553},
+  pages = {436--444},
+  publisher = {Nature Publishing Group},
+  issn = {1476-4687},
+  doi = {10.1038/nature14539},
+  urldate = {2024-06-29},
+  abstract = {Deep learning allows computational models that are composed of multiple processing layers to learn representations of data with multiple levels of abstraction. These methods have dramatically improved the state-of-the-art in speech recognition, visual object recognition, object detection and many other domains such as drug discovery and genomics. Deep learning discovers intricate structure in large data sets by using the backpropagation algorithm to indicate how a machine should change its internal parameters that are used to compute the representation in each layer from the representation in the previous layer. Deep convolutional nets have brought about breakthroughs in processing images, video, speech and audio, whereas recurrent nets have shone light on sequential data such as text and speech.},
+  copyright = {2015 Springer Nature Limited},
+  langid = {english},
+  keywords = {Computer science,Mathematics and computing},
+  file = {C:\Users\paulc\Zotero\storage\F53GP4W3\LeCun et al. - 2015 - Deep learning.pdf}
+}
+
+@article{LeCun:HandwrittenDigit:1990,
   title = {Handwritten {{Digit Recognition}} with a {{Back-Propagation Network}}},
   author = {LeCun, Yann and Boser, Bernhard E and Denker, John S and Henderson, Donnie and Howard, R E and Hubbard, Wayne E and Jackel, Lawrence D},
+  year = {1990},
   abstract = {We present an application of back-propagation networks to handwritten digit recognition. Minimal preprocessing of the data was required, but architecture of the network was highly constrained and specifically designed for the task. The input of the network consists of normalized images of isolated digits. The method has 1\% error rate and about a 9\% reject rate on zipcode digits provided by the U.S. Postal Service.},
   langid = {english},
   file = {C:\Users\paulc\Zotero\storage\GZEYQ9AI\LeCun et al. - Handwritten Digit Recognition with a Back-Propagat.pdf}
@@ -1178,6 +1294,41 @@
   doi = {10.1007/s11263-019-01247-4},
   abstract = {Object detection, one of the most fundamental and challenging problems in computer vision, seeks to locate object instances from a large number of predefined categories in natural images. Deep learning techniques have emerged as a powerful strategy for learning feature representations directly from data and have led to remarkable breakthroughs in the field of generic object detection. Given this period of rapid evolution, the goal of this paper is to provide a comprehensive survey of the recent achievements in this field brought about by deep learning techniques. More than 300 research contributions are included in this survey, covering many aspects of generic object detection: detection frameworks, object feature representation, object proposal generation, context modeling, training strategies, and evaluation metrics. We finish the survey by identifying promising directions for future research.},
   file = {C:\Users\paulc\Zotero\storage\RMBQ5H8F\Liu et al. - 2020 - Deep Learning for Generic Object Detection A Surv.pdf}
+}
+
+@article{Liu:SurveyVisual:2024,
+  title = {A {{Survey}} of {{Visual Transformers}}},
+  author = {Liu, Yang and Zhang, Yao and Wang, Yixin and Hou, Feng and Yuan, Jin and Tian, Jiang and Zhang, Yang and Shi, Zhongchao and Fan, Jianping and He, Zhiqiang},
+  year = {2024},
+  month = jun,
+  journal = {IEEE Transactions on Neural Networks and Learning Systems},
+  volume = {35},
+  number = {6},
+  pages = {7478--7498},
+  issn = {2162-2388},
+  doi = {10.1109/TNNLS.2022.3227717},
+  urldate = {2024-06-29},
+  abstract = {Transformer, an attention-based encoder--decoder model, has already revolutionized the field of natural language processing (NLP). Inspired by such significant achievements, some pioneering works have recently been done on employing Transformer-liked architectures in the computer vision (CV) field, which have demonstrated their effectiveness on three fundamental CV tasks (classification, detection, and segmentation) as well as multiple sensory data stream (images, point clouds, and vision-language data). Because of their competitive modeling capabilities, the visual Transformers have achieved impressive performance improvements over multiple benchmarks as compared with modern convolution neural networks (CNNs). In this survey, we have reviewed over 100 of different visual Transformers comprehensively according to three fundamental CV tasks and different data stream types, where taxonomy is proposed to organize the representative methods according to their motivations, structures, and application scenarios. Because of their differences on training settings and dedicated vision tasks, we have also evaluated and compared all these existing visual Transformers under different configurations. Furthermore, we have revealed a series of essential but unexploited aspects that may empower such visual Transformers to stand out from numerous architectures, e.g., slack high-level semantic embeddings to bridge the gap between the visual Transformers and the sequential ones. Finally, two promising research directions are suggested for future investment. We will continue to update the latest articles and their released source codes at https://github.com/liuyang-ict/awesome-visual-transformers.},
+  keywords = {Classification,Computational modeling,computer vision (CV),Convolution,Decoding,detection,point clouds,segmentation,self-supervision,Task analysis,Taxonomy,Transformers,visual Transformer,visual-linguistic pretraining,Visualization},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\FHQJ2E4E\\Liu et al. - 2024 - A Survey of Visual Transformers.pdf;C\:\\Users\\paulc\\Zotero\\storage\\VK85W4CR\\10088164.html}
+}
+
+@article{Lv:DeepLearningbased:2023,
+  title = {Deep Learning-Based Semantic Segmentation of Remote Sensing Images: A Review},
+  shorttitle = {Deep Learning-Based Semantic Segmentation of Remote Sensing Images},
+  author = {Lv, Jinna and Shen, Qi and Lv, Mingzheng and Li, Yiran and Shi, Lei and Zhang, Peiying},
+  year = {2023},
+  month = jul,
+  journal = {Frontiers in Ecology and Evolution},
+  volume = {11},
+  publisher = {Frontiers},
+  issn = {2296-701X},
+  doi = {10.3389/fevo.2023.1201125},
+  urldate = {2024-07-08},
+  abstract = {{$<$}p{$>$}Semantic segmentation is a fundamental but challenging problem of pixel-level remote sensing (RS) data analysis. Semantic segmentation tasks based on aerial and satellite images play an important role in a wide range of applications. Recently, with the successful applications of deep learning (DL) in the computer vision (CV) field, more and more researchers have introduced and improved DL methods to the task of RS data semantic segmentation and achieved excellent results. Although there are a large number of DL methods, there remains a deficiency in the evaluation and advancement of semantic segmentation techniques for RS data. To solve the problem, this paper surveys more than 100 papers in this field in the past 5 years and elaborates in detail on the aspects of technical framework classification discussion, datasets, experimental evaluation, research challenges, and future research directions. Different from several previously published surveys, this paper first focuses on comprehensively summarizing the advantages and disadvantages of techniques and models based on the important and difficult points. This research will help beginners quickly establish research ideas and processes in this field, allowing them to focus on algorithm innovation without paying too much attention to datasets, evaluation indicators, and research frameworks.{$<$}/p{$>$}},
+  langid = {english},
+  keywords = {Convolutional Neural Network,deep learning,remote sensing,satellite image,Sematic segmentation},
+  file = {C:\Users\paulc\Zotero\storage\IKZUGR8Z\Lv et al. - 2023 - Deep learning-based semantic segmentation of remot.pdf}
 }
 
 @inproceedings{Marshall:ParkingMixeduse:2006,
@@ -1398,6 +1549,19 @@
   langid = {english},
   keywords = {Human pose estimation},
   file = {C:\Users\paulc\Zotero\storage\437KY3JI\Newell et al. - 2016 - Stacked Hourglass Networks for Human Pose Estimati.pdf}
+}
+
+@misc{OQLF:ApprentissageProfond:2024,
+  title = {{apprentissage profond}},
+  author = {{OQLF}},
+  year = {2024},
+  month = jul,
+  journal = {Office Qu{\'e}becois de la Langue Fran{\c c}aise},
+  urldate = {2024-07-02},
+  abstract = {Mode d'apprentissage automatique g{\'e}n{\'e}ralement effectu{\'e} par un r{\'e}seau de neurones artificiels compos{\'e} de plusieurs couches de neurones hi{\'e}rarchis{\'e}es selon le degr{\'e} de complexit{\'e} des concepts, et qui, en interagissant entre elles, permettent {\`a} un agent d'apprendre progressivement et efficacement {\`a} partir de m{\'e}gadonn{\'e}es.},
+  howpublished = {https://vitrinelinguistique.oqlf.gouv.qc.ca/fiche-gdt/fiche/26532876/apprentissage-profond},
+  langid = {french},
+  file = {C:\Users\paulc\Zotero\storage\UBVGU9UF\apprentissage-profond.html}
 }
 
 @mastersthesis{Pesek:MaskRCNN:2018,
@@ -1630,6 +1794,23 @@
   file = {C\:\\Users\\paulc\\Zotero\\storage\\TQFRUY43\\Thisanke et al. - 2023 - Semantic segmentation using Vision Transformers A.pdf;C\:\\Users\\paulc\\Zotero\\storage\\CJ9QQWVL\\S0952197623008539.html}
 }
 
+@article{Thisanke:SemanticSegmentation:2023a,
+  title = {Semantic Segmentation Using {{Vision Transformers}}: {{A}} Survey},
+  shorttitle = {Semantic Segmentation Using {{Vision Transformers}}},
+  author = {Thisanke, Hans and Deshan, Chamli and Chamith, Kavindu and Seneviratne, Sachith and Vidanaarachchi, Rajith and Herath, Damayanthi},
+  year = {2023},
+  month = nov,
+  journal = {Engineering Applications of Artificial Intelligence},
+  volume = {126},
+  pages = {106669},
+  issn = {0952-1976},
+  doi = {10.1016/j.engappai.2023.106669},
+  urldate = {2024-06-29},
+  abstract = {Semantic segmentation has a broad range of applications in a variety of domains including land coverage analysis, autonomous driving, and medical image analysis. Convolutional neural networks (CNN) and Vision Transformers (ViTs) provide the architecture models for semantic segmentation. Even though ViTs have proven success in image classification, they cannot be directly applied to dense prediction tasks such as image segmentation and object detection since ViT is not a general purpose backbone due to its patch partitioning scheme. In this survey, we discuss some of the different ViT architectures that can be used for semantic segmentation and how their evolution managed the above-stated challenge. The rise of ViT and its performance with a high success rate motivated the community to slowly replace the traditional convolutional neural networks in various computer vision tasks. This survey aims to review and compare the performances of ViT architectures designed for semantic segmentation using benchmarking datasets. This will be worthwhile for the community to yield knowledge regarding the implementations carried out in semantic segmentation and to discover more efficient methodologies using ViTs.},
+  keywords = {Convolution neural networks,Deep learning,Review,Self-supervised learning,Semantic segmentation,Survey,Vision Transformer},
+  file = {C\:\\Users\\paulc\\Zotero\\storage\\LTH7J6D4\\Thisanke et al. - 2023 - Semantic segmentation using Vision Transformers A.pdf;C\:\\Users\\paulc\\Zotero\\storage\\I8GMZF5W\\S0952197623008539.html}
+}
+
 @article{Thompson:PARKINFOCentralcity:1993,
   title = {{{PARKINFO}}. {{A}} Central-City Parking Information System},
   author = {Thompson, R.G. and Collins, E.C.},
@@ -1832,6 +2013,42 @@
   file = {C:\Users\paulc\Zotero\storage\6U6R7E7C\1508510.html}
 }
 
+@article{Wang:PVTV2:2022,
+  title = {{{PVT}} v2: {{Improved}} Baselines with {{Pyramid Vision Transformer}}},
+  shorttitle = {{{PVT}} V2},
+  author = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
+  year = {2022},
+  month = sep,
+  journal = {Computational Visual Media},
+  volume = {8},
+  number = {3},
+  pages = {415--424},
+  issn = {2096-0662},
+  doi = {10.1007/s41095-022-0274-8},
+  urldate = {2024-06-29},
+  abstract = {Transformers have recently lead to encouraging progress in computer vision. In this work, we present new baselines by improving the original Pyramid Vision Transformer (PVT v1) by adding three designs: (i) a linear complexity attention layer, (ii) an overlapping patch embedding, and (iii) a convolutional feed-forward network. With these modifications, PVT v2 reduces the computational complexity of PVT v1 to linearity and provides significant improvements on fundamental vision tasks such as classification, detection, and segmentation. In particular, PVT v2 achieves comparable or better performance than recent work such as the Swin transformer. We hope this work will facilitate state-of-the-art transformer research in computer vision. Code is available at https://github.com/whai362/PVT.},
+  langid = {english},
+  keywords = {dense prediction,image classification,object detection,semantic segmentation,transformers},
+  file = {C:\Users\paulc\Zotero\storage\8AIASLHZ\Wang et al. - 2022 - PVT v2 Improved baselines with Pyramid Vision Tra.pdf}
+}
+
+@article{Wang:UNetFormerUNetlike:2022,
+  title = {{{UNetFormer}}: {{A UNet-like}} Transformer for Efficient Semantic Segmentation of Remote Sensing Urban Scene Imagery},
+  shorttitle = {{{UNetFormer}}},
+  author = {Wang, Libo and Li, Rui and Zhang, Ce and Fang, Shenghui and Duan, Chenxi and Meng, Xiaoliang and Atkinson, Peter M.},
+  year = {2022},
+  month = aug,
+  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+  volume = {190},
+  pages = {196--214},
+  issn = {0924-2716},
+  doi = {10.1016/j.isprsjprs.2022.06.008},
+  urldate = {2024-07-04},
+  abstract = {Semantic segmentation of remotely sensed urban scene images is required in a wide range of practical applications, such as land cover mapping, urban change detection, environmental protection, and economic assessment. Driven by rapid developments in deep learning technologies, the convolutional neural network (CNN) has dominated semantic segmentation for many years. CNN adopts hierarchical feature representation, demonstrating strong capabilities for information extraction. However, the local property of the convolution layer limits the network from capturing the global context. Recently, as a hot topic in the domain of computer vision, Transformer has demonstrated its great potential in global information modelling, boosting many vision-related tasks such as image classification, object detection, and particularly semantic segmentation. In this paper, we propose a Transformer-based decoder and construct an UNet-like Transformer (UNetFormer) for real-time urban scene segmentation. For efficient segmentation, the UNetFormer selects the lightweight ResNet18 as the encoder and develops an efficient global--local attention mechanism to model both global and local information in the decoder. Extensive experiments reveal that our method not only runs faster but also produces higher accuracy compared with state-of-the-art lightweight models. Specifically, the proposed UNetFormer achieved 67.8\% and 52.4\% mIoU on the UAVid and LoveDA datasets, respectively, while the inference speed can achieve up to 322.4 FPS with a 512~{\texttimes}~512 input on a single NVIDIA GTX 3090 GPU. In further exploration, the proposed Transformer-based decoder combined with a Swin Transformer encoder also achieves the state-of-the-art result (91.3\% F1 and 84.1\% mIoU) on the Vaihingen dataset. The source code will be freely available at https://github.com/WangLibo1995/GeoSeg.},
+  keywords = {Fully Transformer Network,Global-local Context,Remote Sensing,Semantic Segmentation,Urban Scene,Vision Transformer},
+  file = {C:\Users\paulc\Zotero\storage\BWGMHP9A\Wang et al. - 2022 - UNetFormer A UNet-like transformer for efficient .pdf}
+}
+
 @article{Weinberger:ResidentialOffStreet:2009,
   title = {Residential {{Off-Street Parking Impacts}} on {{Car Ownership}}, {{Vehicle Miles Traveled}}, and {{Related Carbon Emissions}}: {{New York City Case Study}}},
   shorttitle = {Residential {{Off-Street Parking Impacts}} on {{Car Ownership}}, {{Vehicle Miles Traveled}}, and {{Related Carbon Emissions}}},
@@ -1849,6 +2066,40 @@
   abstract = {Parking is a key element of the street and highway system. Parking supply affects driving demand by changing the underlying cost structure associated with mode choice decisions. It also affects levels of auto ownership by changing the cost of auto ownership. These two facts combine to make parking management an important and powerful tool for both traffic and air-quality management. A pilot analysis of demographics, highway and transit access, and off-street parking in two New York City neighborhoods strongly suggests that the provision of residential off-street parking affects commuting behavior. Moreover, the type of parking provision plays a strong role in determining mode share. Accessory parking that is adjacent to a home, in a garage or driveway, seems more likely to generate auto commutes than does parking in commercial centralized lots. This analysis, which was followed by testing plausible development scenarios, shows that the city's residential off-street parking regulations will undermine its own vision for a sustainable future.},
   langid = {english},
   file = {C:\Users\paulc\Zotero\storage\QN2QLCL9\Weinberger et al. - 2009 - Residential Off-Street Parking Impacts on Car Owne.pdf}
+}
+
+@inproceedings{Xie:SegFormerSimple:2021a,
+  title = {{{SegFormer}}: {{Simple}} and {{Efficient Design}} for {{Semantic Segmentation}} with {{Transformers}}},
+  shorttitle = {{{SegFormer}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Xie, Enze and Wang, Wenhai and Yu, Zhiding and Anandkumar, Anima and Alvarez, Jose M. and Luo, Ping},
+  year = {2021},
+  volume = {34},
+  pages = {12077--12090},
+  publisher = {Curran Associates, Inc.},
+  urldate = {2024-07-08},
+  abstract = {We present SegFormer, a simple, efficient yet powerful semantic segmentation framework which unifies Transformers with lightweight multilayer perceptron (MLP) decoders. SegFormer has two appealing features: 1) SegFormer comprises a novel hierarchically structured Transformer encoder which outputs multiscale features. It does not need positional encoding, thereby avoiding the interpolation of positional codes which leads to decreased performance when the testing resolution differs from training. 2) SegFormer avoids complex decoders. The proposed MLP decoder aggregates information from different layers, and thus combining both local attention and global attention to render powerful representations. We show that this simple and lightweight design is the key to efficient segmentation on Transformers.  We scale our approach up to obtain a series of models from SegFormer-B0 to Segformer-B5, which reaches much better performance and efficiency than previous counterparts.For example, SegFormer-B4 achieves 50.3\% mIoU on ADE20K with 64M parameters, being 5x smaller and 2.2\% better than the previous best method. Our best model, SegFormer-B5, achieves 84.0\% mIoU on Cityscapes validation set and shows excellent zero-shot robustness on Cityscapes-C.},
+  file = {C:\Users\paulc\Zotero\storage\5ETWTPNB\Xie et al. - 2021 - SegFormer Simple and Efficient Design for Semanti.pdf}
+}
+
+@article{Yang:BuildingExtraction:2018,
+  title = {Building {{Extraction}} in {{Very High Resolution Imagery}} by {{Dense-Attention Networks}}},
+  author = {Yang, Hui and Wu, Penghai and Yao, Xuedong and Wu, Yanlan and Wang, Biao and Xu, Yongyang},
+  year = {2018},
+  month = nov,
+  journal = {Remote Sensing},
+  volume = {10},
+  number = {11},
+  pages = {1768},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  issn = {2072-4292},
+  doi = {10.3390/rs10111768},
+  urldate = {2024-07-03},
+  abstract = {Building extraction from very high resolution (VHR) imagery plays an important role in urban planning, disaster management, navigation, updating geographic databases, and several other geospatial applications. Compared with the traditional building extraction approaches, deep learning networks have recently shown outstanding performance in this task by using both high-level and low-level feature maps. However, it is difficult to utilize different level features rationally with the present deep learning networks. To tackle this problem, a novel network based on DenseNets and the attention mechanism was proposed, called the dense-attention network (DAN). The DAN contains an encoder part and a decoder part which are separately composed of lightweight DenseNets and a spatial attention fusion module. The proposed encoder--decoder architecture can strengthen feature propagation and effectively bring higher-level feature information to suppress the low-level feature and noises. Experimental results based on public international society for photogrammetry and remote sensing (ISPRS) datasets with only red--green--blue (RGB) images demonstrated that the proposed DAN achieved a higher score (96.16\% overall accuracy (OA), 92.56\% F1 score, 90.56\% mean intersection over union (MIOU), less training and response time and higher-quality value) when compared with other deep learning methods.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {attention mechanism,building extraction,deep learning,imagery,very high resolution},
+  file = {C:\Users\paulc\Zotero\storage\N6F64HJ4\Yang et al. - 2018 - Building Extraction in Very High Resolution Imager.pdf}
 }
 
 @article{Yin:BuiltEnvironment:2018,
