--- a/2025_PaulCharbonneau_Memoire_MSc.tex
+++ b/2025_PaulCharbonneau_Memoire_MSc.tex
@@ -64,7 +64,9 @@
 \usepackage{flafter,placeins}
 %%
 %% Autres modules. / Other packages.
-\usepackage{amsmath,color,soulutf8,longtable,colortbl,setspace,xspace,url,pdflscape} %cite
+\usepackage{amsmath,color,soulutf8,longtable,colortbl,setspace,xspace,url,pdflscape,amsthm} %cite
+\newtheorem{definition}{Définition}
+
 %%
 %% Support des acronymes. / Support for acronyms.
 \usepackage[nolist]{acronym}
